tests/invalid/shadowing_error/shadow_inner_linear_not_consumed.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    let x: linear isize = 42;
    0
}
